# AlgoVisuFS/Dtos/MazeInputDto.cs
@@ -1,0 +1,12 @@
+﻿using System.ComponentModel.DataAnnotations;
+
+namespace AlgoVisuFS.WebApi.Dtos
+{
+    public class MazeInputDto
+    {
+        [Required]
+        public MazeModelDto MazeModel { get; set; }
+        [Required]
+        public CellGetDto starCell { get; set; }
+    }
+}
