# AlgoVisuFS/Dtos/NaivBudgetDto.cs
@@ -2,7 +2,7 @@
 
 namespace AlgoVisuFS.WebApi.Dtos
 {
-    public class NaivBudgetGetResponseDto
+    public class NaivBudgetDto
     {
         [Required]
         public double DailySpending { get; init; }
